@@ -204,15 +204,13 @@ if ($postrm_hook) {
   &run_hook("postrm", $postrm_hook);
 }
 if (-d "/etc/kernel/postrm.d") {
-  warn "Examining /etc/kernel/postrm.d .\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version " .
+  system ("run-parts --report --exit-on-error --arg=$version " .
           "--arg=$realimageloc$kimage-$version " .
           "/etc/kernel/postrm.d") &&
             die "Failed to process /etc/kernel/postrm.d";
 }
 if (-d "/etc/kernel/postrm.d/$version") {
-  warn "Examining /etc/kernel/postrm.d/$version .\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version " .
+  system ("run-parts --report --exit-on-error --arg=$version " .
           "--arg=$realimageloc$kimage-$version " .
           "/etc/kernel/postrm.d/$version") &&
             die "Failed to process /etc/kernel/postrm.d/$version";
