@@ -102,15 +102,13 @@ if (-x "$preinst_hook") {
   &run_hook("preinst", $preinst_hook);
 }
 if (-d "/etc/kernel/preinst.d") {
-  print STDERR "Examining /etc/kernel/preinst.d/\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version" .
+  system ("run-parts --report --exit-on-error --arg=$version" .
           " --arg=$realimageloc$kimage-$version" .
           " /etc/kernel/preinst.d") &&
             die "Failed to process /etc/kernel/preinst.d";
 }
 if (-d "/etc/kernel/preinst.d/$version") {
-  print STDERR "Examining /etc/kernel/preinst.d/$version.\n";
-  system ("run-parts --verbose --exit-on-error --arg=$version" .
+  system ("run-parts --report --exit-on-error --arg=$version" .
           " --arg=$realimageloc$kimage-$version" .
           " /etc/kernel/preinst.d/$version") &&
             die "Failed to process /etc/kernel/preinst.d/$version";
