@@ -7,6 +7,7 @@ linux (3.12.6-3) UNRELEASED; urgency=low
     - Enable DEBUG_STACKOVERFLOW
     - udeb: Build packages for the parisc64-smp flavour instead of the
       removed parisc flavour (fixes FTBFS)
+  * linux-image: Make maintainer scripts less verbose (Closes: #734266)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Jan 2014 01:26:59 +0000
 
